test/types/range/enum/castEnumRange2.good
castEnumRange2.chpl:4: warning: Casts between ranges involving 'enum' indices are currently unstable (see issue #22406); consider performing the conversion manually
castEnumRange2.chpl:4: error: can't cast from an abstract enum ('color') to int(64)
